# mlops

./: .env.example  .gitignore  Makefile  README.md  definitions.py  pyproject.toml
data/: README.md
deploy/: dagster-daemon.service  dagster-webserver.service  setup.sh
notebooks/: explore_warehouse.ipynb
src/conf/: constants.py  tables.py
src/data/: README.md  db.py
src/data/bronze/: generation_and_exchange_bronze.py
src/data/silver/: gross_consumption_silver.py
src/data/utils/: api.py  warehouse.py
src/data/validation/: dq_checking.py
src/ml/: modelwrapper.py
src/ml/features/: feature_functions.py  featurizer.py
src/ml/loaders/: dataloader_functions.py  dataloaders.py
src/utils/: logger.py
tests/unit/data/silver/: test_gross_consumption_silver.py
tests/unit/data/utils/: test_api.py  test_warehouse.py
tests/unit/data/validation/: test_dq_checking.py  test_dq_checking_silver.py
