[project]
name = "mlops"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "dagster>=1.13.1",
    "dagster-webserver>=1.13.1",
    "duckdb>=1.5.2",
    "jupyter>=1.1.1",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "requests>=2.33.1",
]

[tool.dagster]
module_name = "definitions"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "requests-mock>=1.12.1",
]

[tool.uv]
package = true  # installs the project in editable mode automatically on uv sync
